Project

General

Profile

Actions

Bug #19828

closed

mds: valgrind InvalidRead detected in Locker

Added by Patrick Donnelly almost 7 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
High
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

<error>
  <unique>0x0</unique>
  <tid>20</tid>
  <threadname>fn_anonymous</threadname>
  <kind>InvalidRead</kind>
  <what>Invalid read of size 4</what>
  <stack>
    <frame>
      <ip>0x51EC55</ip>
      <obj>/usr/bin/ceph-mds</obj>
      <fn>Locker::file_update_finish(CInode*, boost::intrusive_ptr&lt;MutationImpl&gt;&amp;, bool, client_t, Capability*, MClientCaps*)</fn>
      <dir>/usr/src/debug/ceph-12.0.1-1916-g9af9b45/src/mds</dir>
      <file>Locker.cc</file>
      <line>1826</line>
    </frame>
    <frame>
      <ip>0x52CF5B</ip>
      <obj>/usr/bin/ceph-mds</obj>
      <fn>C_Locker_FileUpdate_finish::finish(int)</fn>
      <dir>/usr/src/debug/ceph-12.0.1-1916-g9af9b45/src/mds</dir>
      <file>Locker.cc</file>
      <line>1772</line>
    </frame>
    <frame>
      <ip>0x5F50F3</ip>
      <obj>/usr/bin/ceph-mds</obj>
      <fn>complete</fn>
      <dir>/usr/src/debug/ceph-12.0.1-1916-g9af9b45/src/include</dir>
      <file>Context.h</file>
      <line>70</line>
    </frame>

From: /ceph/teuthology-archive/pdonnell-2017-05-03_00:47:39-multimds-wip-pdonnell-testing2-testing-basic-smithi/1093435/remote/smithi015/log/valgrind/mds.h.log.gz

Actions #1

Updated by Zheng Yan almost 7 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by John Spray almost 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF